--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
 
             <div class="play_logo">
 
+
                 <div class="play_curriculam"><i class="fa fa-object-group" aria-hidden="true"></i></div>
 
-                <div class="play_cont"> Play Ground:</div>
+
+                <div class="play_cont"> Play Ground :</div>
 
             </div><br>
 
@@ -101,7 +103,7 @@
 
                 <div class="music_curriculam"><i class="fa fa-music" aria-hidden="true"></i></div>
 
-                <div class="music_cont"> Music and Dance:</div>
+                <div class="music_cont"> Music and Dance :</div>
 
             </div><br>
 
@@ -118,7 +120,7 @@
 
                 <div class="arts_curriculam"><i class="fa fa-paint-brush" aria-hidden="true"></i></div>
 
-                <div class="arts_cont"> Arts and Crafts:</div>
+                <div class="arts_cont"> Arts and Crafts :</div>
             </div><br>
 
             <div class="arts_content"> Lorem ipsum
@@ -138,7 +140,7 @@
 
                 <div class="transport_curriculam"><i class="fa fa-car" aria-hidden="true"></i></div>
 
-                <div class="transport_cont"> Safe Transportation:</div>
+                <div class="transport_cont"> Safe Transportation :</div>
 
             </div>
             <br>Lorem ipsum dolor
@@ -152,7 +154,7 @@
 
                 <div class="Healthy_curriculam"><i class="fa fa-shopping-basket"></i></div>
 
-                <div class="Healthy_cont"> Healthy food:</div>
+                <div class="Healthy_cont"> Healthy food :</div>
 
             </div>
 
@@ -166,7 +168,7 @@
 
                 <div class="Educational_curriculam"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
 
-                <div class="educational_cont"> Educational Tour:</div>
+                <div class="educational_cont"> Educational Tour :</div>
 
             </div>
 
@@ -206,18 +208,24 @@
 
                     <div class="curriculum_cont1">
 
-                        <div class="check_right1"><i class="fa fa-check"></i></div>ipsum dolor sit amet consectetur
-                        adipiscing elit.
-                        <br><br>
+                        <div class="check_right1"><i class="fa fa-check"></i></div>
+                        <div class="right_cont1"> ipsum dolor sit amet
+                            consectetur
+                            adipiscing elit.
+                            <br><br>
+                        </div>
                     </div>
 
                     <div class="curriculum_cont2">
                         <div class="check_right2"><i class="fa fa-check"></i></div>
-                        dolor tempor in blandit id vulputate non diam<br><br>
+                        <div class="right_cont2"> dolor tempor in blandit id vulputate non diam<br><br></div>
                     </div>
 
                     <div class="curriculum_cont3">
-                        <div class="check_right3"> <i class="fa fa-check"></i></div> quis finibus ante eleifend Etiam
+                        <div class="check_right3"> <i class="fa fa-check"></i></div>
+                        <div class="right_cont3"> quis finibus ante
+                            eleifend
+                            Etiam</div>
                     </div>
 
                 </div>
@@ -694,7 +702,14 @@
                 <h2>Get In Touch</h2>
             </div>
 
-            <h4><i class="fa fa-map-marker"></i> Adress <br>123 Street,New York,USA<br><br> </h4>
+            <div class="adress_cont">
+                <i class="fa fa-map-marker"></i>
+
+                <div class="adress_sub">
+                    Adress <br>123 Street,New York,USA
+                </div>
+
+            </div>
             <h4><i class="fa fa-envelope"></i>
                 Email
                 <br>mail@domain.com <br><br>
