--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="sch_icon"><img src="./images/panda.png" width="45px" height="45px" alt=""> </div>
 
             <div class="sch_heading">
-                <h1>KidKinder</h1>
+                <p style="font-size: 40px"> KidKinder</p>
             </div>
 
         </div>
@@ -57,7 +57,7 @@
 
             <div class="p_head"> Kids Learning Center
                 </a><br>
-                <h1>New Approach to <br>Kids Education</h1>
+                <p style="font-size:50px"> New Approach to <br>Kids Education</p>
             </div>
 
             <div class="Sub_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -84,10 +84,13 @@
             <div class="play_logo">
 
 
-                <div class="play_curriculam"><i class="fa fa-object-group" aria-hidden="true"></i></div>
 
+                <div class="play_curriculam"><i class="fa fa-object-group" aria-hidden="true"></i>
+                </div>
 
-                <div class="play_cont"> Play Ground :</div>
+                <div class="play_cont">
+                    Play Ground :
+                </div>
 
             </div><br>
 
@@ -191,7 +194,7 @@
             </div>
 
             <div class="about_head">
-                <h1>Best School For Your Kids</h1>
+                <p style="font-size:40px"> Best School For Your Kids</p>
             </div>
 
             <div class="about_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum sem eget
@@ -244,7 +247,7 @@
         <div class="pop_cls1">---Popular Classes---</div>
 
         <div class="pop_cls2">
-            <h1>Classes For Your Kids</h1>
+            <p style="font-size:40px"> Classes For Your Kids</p>
         </div>
 
     </div>
@@ -265,7 +268,7 @@
         <div class="drawing">
 
             <div class="drawing_head">
-                <h3>Drawing Class</h3>
+                <p style="font-size:25px">Drawing Class</p>
             </div>
 
             Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Nulla elementum sem eget nibh
@@ -277,7 +280,7 @@
 
             <div class="language_head">
 
-                <h3>Language Learning</h3>
+                <p style="font-size:25px">Language Learning</p>
             </div>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Nulla elementum sem eget nibh
             fermentum,<br> quis
             finibus ante eleifend. Etiam mollis nunc eu tellus tempus
@@ -286,7 +289,7 @@
 
         <div class="basic_science">
             <div class="basic_head">
-                <h3>Basic science</h3>
+                <p style="font-size:25px">Basic science</p>
             </div>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Nulla elementum sem eget nibh
             fermentum,<br> quis
             finibus ante eleifend. Etiam mollis nunc eu tellus tempus
@@ -332,7 +335,7 @@
 
             <div class="book_head">
 
-                <h1>Book A Seat For Your Kid <br></h1>
+                <p style="font-size:40px">Book A Seat For Your Kid <br></p>
             </div>Sed blandit laoreet maximus. Fusce volutpat sodales mi, et vulputate libero placerat at <br> Quisque
             pulvinar odio viverra, rutrum odio in, maximus enim. Nunc sollicitudin auctor <br> egestas. Pellentesque eu
             eleifend <br>
@@ -368,7 +371,7 @@
         <div class="stu_info">
 
             <div class="Seat_book">
-                <h2> Book A Seat</h2>
+                <p style="font-size:30px"> Book A Seat</p>
             </div>
 
             <div>
@@ -405,7 +408,7 @@
         --OUR TEACHER-- </div>
 
     <div class="intro_title">
-        <h1>Meet Our Teachers</h1>
+        <p style="font-size:40px">Meet Our Teachers</p>
     </div>
 
     <div class="main_teacher_content">
@@ -484,7 +487,7 @@
     </div>
 
     <div class="Parent_say">
-        <h1>What Parents Say!</h1>
+        <p style="font-size:40px">What Parents Say!</p>
     </div>
 
     <div class="parent_thoughts">
@@ -556,7 +559,7 @@
     <div class="LatestBlog"><br> --LATEST BLOG--</div>
 
     <div class="LatestArticle">
-        <h1>Latest Article From Blog</h1>
+        <p style="font-size:40px">Latest Article From Blog</p>
     </div>
 
 
@@ -667,7 +670,7 @@
                 <div><img src="./images/panda.png " width="35px" height="40px" alt="panda img"></div>
 
                 <div class="footer_head">
-                    <h1>KidKinder</h1>
+                    <p style="font-size:40px">KidKinder</p>
                 </div>
 
             </div>
@@ -699,24 +702,38 @@
 
             <div class="get_color">
 
-                <h2>Get In Touch</h2>
+                <p style="font-size:25px">Get In Touch</p>
             </div>
 
+
             <div class="adress_cont">
-                <i class="fa fa-map-marker"></i>
+                <p style="font-size:20px;"><i class="fa fa-map-marker"></i></p>
 
                 <div class="adress_sub">
-                    Adress <br>123 Street,New York,USA
+                    <p style="font-size:20px;"> Adress <br>123 Street,New York,USA</p>
                 </div>
 
             </div>
-            <h4><i class="fa fa-envelope"></i>
-                Email
-                <br>mail@domain.com <br><br>
-            </h4>
-            <h4><i class="fa fa-phone"></i> Phone
-                <br>+01298354673
-            </h4>
+
+            <div class="email_cont">
+                <p style="font-size:20px"><i class="fa fa-envelope"></i></p>
+                <div class="email_sub">
+                    <p style="font-size:20px"> Email
+                        <br>mail@domain.com
+                    </p>
+                </div>
+            </div>
+
+            <div class="phone_cont">
+                <p style="font-size:20px"><i class="fa fa-phone"></i></p>
+
+                <div class="phone_sub">
+                    <p style="font-size:20px"> Phone
+                        <br>+01298354673
+                    </p>
+                </div>
+            </div>
+
         </div>
 
         <div class="F_content3">
@@ -725,30 +742,54 @@
                 <h2>QuickLinks</h2>
             </div>
 
-            <h4><i class="fa fa-angle-right"></i>
-                home </h4>
-
-            <div>
-                <h4><i class="fa fa-angle-right"></i> About Us </h4>
+            <div class="home_cont">
+                <p style="font-size:20px"><i class="fa fa-angle-right"></i></p>
+                <div class="home">
+                    <p style="font-size:20px">
+                        Home</p>
+                </div>
             </div>
 
-            <div>
-                <h4><i class="fa fa-angle-right"></i> Our Classes </h4>
+
+            <div class="about_cont">
+                <p style="font-size:20px"><i class="fa fa-angle-right"></i></p>
+
+                <div class="about">
+                    <p style="font-size:20px"> About Us </p>
+                </div>
             </div>
 
-            <div>
-                <h4><i class="fa fa-angle-right"></i> Our Teachers </h4>
+            <div class="our_cont">
+                <p style="font-size:20px"><i class="fa fa-angle-right"></i></p>
+
+                <div class="our">
+                    <p style="font-size:20px"> Our Classes</p>
+                </div>
             </div>
 
-            <div>
-                <h4><i class="fa fa-angle-right"></i>Our
-                    Blog </h4>
+            <div class="teacher_cont">
+                <p style="font-size:20px"><i class="fa fa-angle-right"></i></p>
+
+                <div class="teacher">
+                    <p style="font-size:20px"> Our Teacher</p>
+                </div>
             </div>
 
-            <div>
-                <h4><i class="fa fa-angle-right"></i> Contact Us </h4>
+            <div class="blog_cont">
+                <p style="font-size:20px"><i class="fa fa-angle-right"></i></p>
+
+                <div class="blog">
+                    <p style="font-size:20px"> Our Blog</p>
+                </div>
             </div>
 
+            <div class="contact_cont">
+                <p style="font-size:20px"><i class="fa fa-angle-right"></i></p>
+
+                <div class="contact">
+                    <p style="font-size:20px"> Contact Us</p>
+                </div>
+            </div>
         </div>
 
         <div class="F_content4"><br>
