--- a/index.html
+++ b/index.html
@@ -795,26 +795,22 @@
         <div class="F_content4"><br>
 
             <div class="news_head">
-                <h2>Newsletter</h2>
+                <p style="font-size:25px">Newsletter</p>
             </div>
 
-            <form class="footer form">
+
+            <div class="your_name">
+                <p><input class="your_name" type="text" placeholder="Your Name"></p>
+            </div>
 
 
-                <div class="your_name">
-                    <p><input class="your_name" type="text" placeholder="Your Name"></p>
-                </div>
+            <div class="your_email">
+                <p><input class="your_email" type="text" placeholder="Your Email"></p>
+            </div>
 
-
-                <div class="your_email">
-                    <p><input class="your_email" type="text" placeholder="Your Email"></p>
-                </div>
-
-                <div class="join_btn"><a href="/this">
-                        <input type="submit" value="Submit Now" class="f_button" /></a>
-                </div>
-
-            </form>
+            <div class="join_btn"><a href="/this">
+                    <input type="submit" value="Submit Now" class="f_button" /></a>
+            </div>
 
         </div>
 
